change on github

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1 id="title" property>First Yax Website</h1>
     <div id="content" property class="tinymce">
         Edit the headline and description.
+        Change on github
     </div>
 </body>
 </html>
